[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "lstmadnet"
version = "1.0.0"
description = "LST-MADNet: Learnable Scattering Transform for Multimodal Anomaly Detection in Industrial Manufacturing"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Mohammadali Zakeriharandi", email = "mohammadali.zakeriharandi@gmail.com"}]
requires-python = ">=3.9"
keywords = ["anomaly-detection", "time-series", "multimodal", "scattering-transform", "deep-learning", "manufacturing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "librosa",
    "matplotlib",
    "seaborn",
    "tqdm",
    "pyarrow",
    "wandb",
    "torcheval",
]

[project.optional-dependencies]
dev = ["pytest", "ipykernel", "nbconvert"]

[project.urls]
Homepage = "https://github.com/MoZaKeri/LST-MADNet"
Repository = "https://github.com/MoZaKeri/LST-MADNet"

[tool.setuptools.packages.find]
include = ["lstmadnet*"]
